# convergent_routes

./: LICENSE  README.md  environment.yml  pyproject.toml
experiments/convergent_search/: config_chemformer_uspto.yaml  config_chemformer_uspto_emolecules.yaml  config_chemformer_uspto_emolecules_individual.yaml  config_chemformer_uspto_individual.yaml
experiments/deduplicate_routes/: config_uspto.yaml
experiments/process_reactions/: config_uspto.yaml
src/: analyse_search.py  convergent_search.py  data_handling.py  deduplicate_cluster.py  evaluate_search.py  main.py  process_reactions.py  utils.py
